--- a/css/example_opacity/styles.css
+++ b/css/example_opacity/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background-color: #AD6A6C;
+  background-color: #ad6a6c;
   padding: 1rem;
 }
 
@@ -26,7 +26,7 @@ a {
   border-radius: 5px;
   background-color: rgb(255 255 255 /60%);
   color: rgb(0 0 0 /60%);
-  padding: .5em;
+  padding: 0.5em;
   transition: background-color 1s linear;
   font-size: 24px;
 }
@@ -39,15 +39,16 @@ form {
 }
 
 form input {
-  padding: .7em .5em;
+  padding: 0.7em 0.5em;
 }
 
 form button {
-  padding: .7em 1em;
+  padding: 0.7em 1em;
   cursor: pointer;
 }
 
-form input, form button {
+form input,
+form button {
   font-size: 16px;
   color: #000;
   border-radius: 5px;
@@ -55,13 +56,18 @@ form input, form button {
   background-color: rgb(255 255 255 /30%);
 }
 
-a:hover, form input:hover, form button:hover,
-a:focus, form input:focus, form button:focus {
+a:hover,
+form input:hover,
+form button:hover,
+a:focus,
+form input:focus,
+form button:focus {
   background-color: #fff;
 }
 
-
-a:focus, form input:focus, form button:focus {
+a:focus,
+form input:focus,
+form button:focus {
   /* outline: 0; */
   box-shadow: 0 0 0 5px rgb(0 0 0 /25%);
 }
