--- a/css/box-model/styles.css
+++ b/css/box-model/styles.css
@@ -16,7 +16,8 @@
   margin: 30px;
 }
 
-#contentBox, #borderBox {
+#contentBox,
+#borderBox {
   border: 5px solid #000;
   width: 200px;
   padding: 15px;
