--- a/css/css-easy-read/styles.css
+++ b/css/css-easy-read/styles.css
@@ -1,7 +1,6 @@
-
 body {
   background-color: oklch(36.2% 0 0);
   color: #fff;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
 }
