--- a/css/midudev/grid/styles.css
+++ b/css/midudev/grid/styles.css
@@ -37,8 +37,8 @@
   /* grid-column: 2 /4;
   grid-row: 2 / 3; */
 
-  grid-column: 1 /3 ;
-  grid-row: 1 /3 ;
+  grid-column: 1 /3;
+  grid-row: 1 /3;
 }
 
 .container div:nth-child(2) {
@@ -48,7 +48,7 @@
   grid-row-start: span 2; */
   grid-column: 1 / 3;
   grid-row: 1 / 3;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 body {
