--- a/css/midudev/layouts/index.html
+++ b/css/midudev/layouts/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Layouts</title>
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-
-  <section class="container">
-    <header>
-      header
-    </header>
-    <aside>aside</aside>
-    <main>content</main>
-    <footer>footer</footer>
-  </section>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Layouts</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <section class="container">
+      <header>header</header>
+      <aside>aside</aside>
+      <main>content</main>
+      <footer>footer</footer>
+    </section>
+  </body>
 </html>
